--- a/Matching/Loops.ipynb
+++ b/Matching/Loops.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -197,9 +197,13 @@
      "output_type": "stream",
      "text": [
       "Found an even number 2\n",
+      "Found a number 3\n",
       "Found an even number 4\n",
+      "Found a number 5\n",
       "Found an even number 6\n",
-      "Found an even number 8\n"
+      "Found a number 7\n",
+      "Found an even number 8\n",
+      "Found a number 9\n"
      ]
     }
    ],
@@ -222,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -386,15 +390,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "List comprehension time =  0.008241891860961914\n",
-      "Naive loop time =  0.020756959915161133\n"
+      "List comprehension time =  0.014724969863891602\n",
+      "Naive loop time =  0.028047561645507812\n"
      ]
     }
    ],
@@ -442,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -508,14 +512,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object DataFrame.iterrows at 0x7f7f00612d50>\n"
+      "<generator object DataFrame.iterrows at 0x0000019AD817DC10>\n"
      ]
     }
    ],
@@ -543,65 +547,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0, school     USC\n",
-      "year      2014\n",
-      "wins         7\n",
-      "Name: 0, dtype: object)\n",
-      "(1, school     USC\n",
-      "year      2015\n",
-      "wins         3\n",
-      "Name: 1, dtype: object)\n",
-      "(2, school     USC\n",
-      "year      2016\n",
-      "wins         6\n",
-      "Name: 2, dtype: object)\n",
-      "(3, school     USC\n",
-      "year      2017\n",
-      "wins         9\n",
-      "Name: 3, dtype: object)\n",
-      "(4, school     USC\n",
-      "year      2018\n",
-      "wins         7\n",
-      "Name: 4, dtype: object)\n",
-      "(5, school     USC\n",
-      "year      2019\n",
-      "wins         4\n",
-      "Name: 5, dtype: object)\n",
-      "(6, school     USC\n",
-      "year      2020\n",
-      "wins         2\n",
-      "Name: 6, dtype: object)\n",
-      "(7, school     UGA\n",
-      "year      2015\n",
-      "wins        10\n",
-      "Name: 7, dtype: object)\n",
-      "(8, school     UGA\n",
-      "year      2016\n",
-      "wins         8\n",
-      "Name: 8, dtype: object)\n",
-      "(9, school     UGA\n",
-      "year      2017\n",
-      "wins        13\n",
-      "Name: 9, dtype: object)\n",
-      "(10, school     UGA\n",
-      "year      2018\n",
-      "wins        11\n",
-      "Name: 10, dtype: object)\n",
-      "(11, school     UGA\n",
-      "year      2019\n",
-      "wins        12\n",
-      "Name: 11, dtype: object)\n",
-      "(12, school     UGA\n",
-      "year      2020\n",
-      "wins         8\n",
-      "Name: 12, dtype: object)\n"
+     "ename": "NameError",
+     "evalue": "name 'frame' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-9641c0251d4a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# assign a name to the generator object\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mframe_rows\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mframe\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# print each item in the generator object\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mframe_rows\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'frame' is not defined"
      ]
     }
    ],
@@ -612,12 +569,12 @@
     "# print each item in the generator object\n",
     "for item in frame_rows:\n",
     "    print(item)\n",
-    "    # each item is a tuple"
+    "    # each item is a tuple\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -865,18 +822,11 @@
     "While we looked at efficient ways to iterate over Numpy arrays or Pandas dataframes, in general **you will want to avoid such loops.  Always look first at ways to perform vectorized operation on these objects**.\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -890,7 +840,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
